pkl-core/src/test/files/LanguageSnippetTests/input/errors/abstractMemberInNonAbstractClass.pkl
class Foo {
  abstract bar: Int
}

res = new Foo { bar = 5 }
